--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,23 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<div class="row">
+<div class="banner d-flex justify-content-center align-items-center text-center"
+     style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+             url('https://static.independent.co.uk/2024/01/05/15/newFile-6.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 450px;">
+  <div class="container">
+    <h4 class="text-white fw-bold mb-3">
+      Find activities for your trip!
+    </h4>
+    <p class="text-white mb-4">
+      Change your life and learn to code at one of our campuses around the world.
+    </p>
+  </div>
+</div>
 
+<div class="row">
   <div class="col-md-3">
     <h2>Chats</h2>
     <div class="mb-4">
@@ -19,3 +34,23 @@
     HERE A FORM WITH CITIES, CATEGORIES AND SEASONS
   </div>
 </div>
+
+<%# <%= simple_form_for @activity do |f| %>
+
+  <%# <%= f.input :city, collection: ["Barcelona", "New York", "Tokyo"], prompt: "Select a city" %>
+
+  <%# <%= f.input :category, collection: [ %>
+      <%# "Experiences & Activities",
+      "Culture & Entertainment",
+      "Family-Friendly",
+      "Nightlife & Social",
+      "Instagrammable Spots"
+    ],
+    prompt: "Select a category" %>
+  <%# %>
+
+  <%# <%= f.input :season, collection: ["Winter", "Spring", "Summer", "Fall"], prompt: "Select a season" %>
+
+  <%# <%= f.button :submit, "Search" %>
+
+<%# <% end %>
