I finished the form in the home page, and connected it to the chat page

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "← #{@chat.name}", challenge_path(@chat) %>
+<%#= link_to "← #{@chat.name}", challenge_path(@chat) %>
 
 <h1 id="chat_title"><%= @chat.title %></h1>
 <div id="messages">
