--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
 <div class="banner d-flex justify-content-center align-items-center text-center"
      style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
              url('https://static.independent.co.uk/2024/01/05/15/newFile-6.jpg');
@@ -8,14 +5,47 @@
             background-position: center;
             height: 450px;">
   <div class="container">
-    <h4 class="text-white fw-bold mb-3">
+
+    <h4 class="text-white fw-bold mb-4">
       Find activities for your trip!
     </h4>
-    <p class="text-white mb-4">
-      Change your life and learn to code at one of our campuses around the world.
-    </p>
+
+    <div class="row justify-content-center">
+      <div class="col-10 col-md-6 col-lg-5">
+
+        <%= simple_form_for Chat.new do |f| %>
+          <%= f.input :city,
+                collection: ["Barcelona", "New York", "Tokyo"],
+                prompt: "Select a city",
+                label: false %>
+
+          <%= f.input :season,
+                collection: ["Winter", "Spring", "Summer", "Fall"],
+                prompt: "Select a season",
+                label: false %>
+
+          <%= f.input :category,
+                collection: [
+                  "Experiences & Activities",
+                  "Culture & Entertainment",
+                  "Family-Friendly",
+                  "Nightlife & Social",
+                  "Instagrammable Spots"
+                ],
+                prompt: "Select a category",
+                label: false %>
+
+          <div class="text-center mt-3">
+            <%= f.submit "Search", class: "btn btn-light" %>
+          </div>
+        <% end %>
+
+      </div>
+    </div>
+
   </div>
 </div>
+
 
 <div class="row">
   <div class="col-md-3">
@@ -31,26 +61,5 @@
         There are no chats yet.
       <% end %>
     </div>
-    HERE A FORM WITH CITIES, CATEGORIES AND SEASONS
   </div>
 </div>
-
-<%# <%= simple_form_for @activity do |f| %>
-
-  <%# <%= f.input :city, collection: ["Barcelona", "New York", "Tokyo"], prompt: "Select a city" %>
-
-  <%# <%= f.input :category, collection: [ %>
-      <%# "Experiences & Activities",
-      "Culture & Entertainment",
-      "Family-Friendly",
-      "Nightlife & Social",
-      "Instagrammable Spots"
-    ],
-    prompt: "Select a category" %>
-  <%# %>
-
-  <%# <%= f.input :season, collection: ["Winter", "Spring", "Summer", "Fall"], prompt: "Select a season" %>
-
-  <%# <%= f.button :submit, "Search" %>
-
-<%# <% end %>
