made the banner full width of page

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -47,7 +47,7 @@
     .nav-links a:hover {
       color: rgba(255, 255, 255, 0.7);
     }
-    body {
-      padding-top: 60px;
-      margin-left: 40px;
-    }
+    // body {
+    //   padding-top: 60px;
+    //   margin-left: 40px;
+    // }
