made some fixes to navbar and chat window

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body style="padding-top:20px;">
     <%= render "shared/flashes" %>
-    <%= yield %>
     <%= render "shared/navbar"%>
+    <%= yield %>
   </body>
 </html>
