--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,10 @@
-<nav class="navbar">
-      <div class="logo">TrueTrek</div>
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Travel Book</a></li>
-          <li><a href="#">Chats</a></li>
-        </ul>
-    </nav>
+<div>
+  <nav class="navbar">
+    <div class="logo">TrueTrek</div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Travel Book</a></li>
+        <li><a href="#">Chats</a></li>
+      </ul>
+  </nav>
+</div>
