finished basic response llm

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -7,13 +7,13 @@
       <% if message.role == "user" %>
         <div class="d-flex justify-content-end mb-2">
           <div class="bg-white px-3 pb-1 pt-1 rounded-pill">
-            <%= raw(message.content) %>
+            <%= raw(render_markdown(message.content)) %>
           </div>
         </div>
       <% elsif message.role == "assistant" %>
         <div class="d-flex justify-content-start mb-5">
           <div class="px-3 pb-0 pt-3">
-            <%= raw(message.content) %>
+            <%= raw(render_markdown(message.content)) %>
           </div>
         </div>
       <% end %>
