travelbook before data

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -21,7 +21,7 @@
 
     .logo {
       font-size: 1.5rem;
-      font-weight: 700;       /* было жирнее, теперь нормальный вес */
+      font-weight: 700;       
       letter-spacing: 1,5px;
     }
 
