--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
       <ul class="nav-links">
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
-          <li><a href="#">Travel Book</a></li>
+          <li><%= link_to "Travelbook", travelbook_path %></a></li>
           <li><a href="#">Chats</a></li>
           <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
         <% else %>
