--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,21 @@
     <%= render "shared/flashes" %>
     <%= render "shared/navbar"%>
     <%= yield %>
+
+    <%= render "shared/navbar" %>
+    <div class="container-fluid">
+
+      <div class="row" data-controller="toggle">
+        <nav class="col-md-2 sidebar pt-3" data-toggle-target="hideable">
+          <%= render "shared/sidenav" %>
+        </nav>
+
+        <div class="col-md-10 my-4">
+          <%= render "shared/flashes" %>
+          <%= yield %>
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
