--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><a href="#">Travel Book</a></li>
           <li><%= link_to "Chats", "#", class: "nav-link", data: { action: "click->toggle#call" } %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
         <% else %>
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         <% end %>
