--- a/app/views/pages/travelbook.html.erb
+++ b/app/views/pages/travelbook.html.erb
@@ -1,9 +1,10 @@
+<div class="container" style="margin-top:5rem;">
+  <h1>My E-Travelbook</h1>
+  <p>Destinations by category and time of year</p>
 
-<h1>My E-Travelbook</h1>
-<p>Destinations by category and time of year</p>
-
-<ul>
-  <li>Lisbon – City break – Best in Spring</li>
-  <li>Bali – Beach – Best in Summer</li>
-  <li>Lapland – Nature – Best in Winter</li>
-</ul>
+  <ul>
+    <% current_user.activities.each do |activity| %>
+      <li><%=   activity.city %> - <%=  activity.category %>- <%=  activity.season %></li>
+    <% end %>
+  </ul>
+</div>
