--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,33 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.sidebar {
+  background:#E8E8E8;
+  backdrop-filter: blur(4px);
+  transition: transform 1s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin-top: 2em;
+  text-align: center;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.sidebar li {
+  display: block;
+  padding: 0.7rem 1rem;
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  background: #262626;       
+  color: #f9fafb;
+  text-decoration: none;
+  font-size: 0.9rem;
+  margin: 0.4em;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
