--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,5 +1,6 @@
-<h3>sidebar for chat histroy</h3>
+
 <div class="mb-4">
+  <h5><i class="fa-solid fa-clock-rotate-left"></i> Histroy</h5>
   <% if current_user.chats.any? %>
     <ul>
       <% current_user.chats.each do |chat| %>
