--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -16,7 +16,7 @@
             <div>
               <%= raw(render_markdown(message.content)) %>
             </div>
-            <%= button_to "Add to travelbook", travel_books_path, class: "btn btn-primary ms-3" %>
+            <%= link_to "Add to travelbook", message_activity_path(message, Activity.find(12)), class: "btn btn-primary ms-3" %>
           </div>
         </div>
       <% end %>
