--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -11,9 +11,12 @@
           </div>
         </div>
       <% elsif message.role == "assistant" %>
-        <div class="d-flex justify-content-start m-2">
-          <div class="bg-white p-6 message-cloud">
-            <%= raw(render_markdown(message.content)) %>
+        <div class="d-flex justify-content-start mb-5">
+          <div class="bg-white p-8 message-cloud">
+            <div>
+              <%= raw(render_markdown(message.content)) %>
+            </div>
+            <%= button_to "Add to travelbook", travel_books_path, class: "btn btn-primary ms-3" %>
           </div>
         </div>
       <% end %>
