--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -1,6 +1,9 @@
 .message-cloud {
   border-radius: 5px;
   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  display: flex;
+  align-items: center;
+  padding: 2rem 1.5rem 2rem 1.5rem;
   p {
     margin-bottom: 0px;
   }
