created the destroy method to be able to delete a chat from the history, I also fixed the padding in the chat so the message is not cropped

--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -12,7 +12,9 @@
 }
 
 #messages {
-  margin-bottom: 1rem !important;
+  max-height: calc(100vh - 220px);
+  overflow-y: auto;
+  padding-bottom: 50px;
 }
 
 .message-cloud {
