--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -30,13 +30,18 @@
   padding: 0.7rem 1rem;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.25);
-  background: #262626;       
+  background: #262626;
   color: #f9fafb;
-  text-decoration: none;
   font-size: 0.9rem;
   margin: 0.4em;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.sidebar li a {
+  text-decoration: none;
+  color: white;
+  text-wrap: initial;
 }
