--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -5,7 +5,10 @@
     <% if current_user.chats.any? %>
       <ul>
         <% current_user.chats.each do |chat| %>
-          <li><%= link_to chat.title, chat_path(chat) %></li>
+          <li><%= link_to chat.title, chat_path(chat) %><%= link_to chat_path(chat),
+                data: { turbo_method: :delete, turbo_confirm: "Delete this chat?" } do %>
+                    <i class="fa-solid fa-trash" style="color: #ffffff;"></i>
+                <% end %></li>
         <% end %>
       </ul>
     <% else %>
