--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <%= yield %>
         </div>
 
-        <nav class="sidebar pt-3 d-none" data-toggle-target="hideable" style="width: 250px">
+        <nav class="sidebar pt-3" data-toggle-target="hideable" style="width: 250px">
           <%= render "shared/sidenav" %>
         </nav>
 
