--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   <div class="container">
 
     <h4 class="text-white fw-bold mb-4">
-      Find activities for your trip!
+      Find activities for your next trip!
     </h4>
 
     <div class="row justify-content-center">
