--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,8 @@
 <div>
   <nav class="navbar">
-    <div class="logo">TrueTrek</div>
+    <div class="logo"><%= link_to "TrueTrek", root_path %></div>
       <ul class="nav-links">
         <% if user_signed_in? %>
-          <li><%= link_to "Home", root_path %></li>
           <li><a href="#">Travel Book</a></li>
           <li><%= link_to "Chats", "#", class: "nav-link", data: { action: "click->toggle#call" } %></li>
           <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
