finished delete feature activities in travelbook

--- a/app/views/pages/travelbook.html.erb
+++ b/app/views/pages/travelbook.html.erb
@@ -3,8 +3,11 @@
   <p>Destinations by category and time of year</p>
 
   <ul>
-    <% current_user.activities.each do |activity| %>
-      <li><%= activity.city %> - <%=  activity.category %>- <%=  activity.season %></li>
+    <% current_user.travel_books.each do |travelbook| %>
+      <li>
+        <%= travelbook.activity.city %> - <%=  travelbook.activity.category %>- <%=  travelbook.activity.season %>
+        <%= link_to "Delete", travel_book_path(travelbook), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+      </li>
     <% end %>
   </ul>
 </div>
