--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -3,27 +3,10 @@
 <div class="container" style="margin-top: 4rem;">
   <h1 id="chat_title"><%= @chat.title %></h1>
   <div id="messages">
-    <% @chat.messages.each do |message| %>
-      <% if message.role == "user" %>
-        <div class="d-flex justify-content-end mb-2">
-          <div class="user p-6 message-cloud">
-            <%= raw(render_markdown(message.content)) %>
-          </div>
-        </div>
-      <% elsif message.role == "assistant" %>
-        <div class="d-flex justify-content-start mb-5">
-          <div class="bg-white p-8 message-cloud">
-              <%= raw(render_markdown(message.content)) %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
+    <%= render "messages/messages", messages: @chat.messages %>
   </div>
 
   <div id="new_message_container">
-    <%= simple_form_for [@chat, @message], html: { class: "d-flex" } do |f| %>
-      <%= f.input :content, label: false, required: true, placeholder: "Ask a question", input_html: { class: "white-bg" }, wrapper_class: "flex-grow-1" %>
-      <%= f.button :submit, 'Ask LLM', class: 'btn btn-primary' %>
-    <% end %>
+    <%= render "messages/form", chat: @chat, message: @message %>
   </div>
 </div>
