fixed the layout issue in the travelbook page

--- a/app/assets/stylesheets/pages/_travelbook.scss
+++ b/app/assets/stylesheets/pages/_travelbook.scss
@@ -13,6 +13,8 @@
   text-align: center;
 }
 
-ul {
-  padding-left: 0;
+@media (max-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
