--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [chat, message] do |f| %>
-  <%= f.input :content, label: "Ask a question", required: true, placeholder: "How should I get started with the challenge?" %>
+<%= simple_form_for [chat, message], html: { class: "d-flex" } do |f| %>
+  <%= f.input :content, label: false, required: true, placeholder: "Ask a question", input_html: { class: "white-bg" }, wrapper_class: "flex-grow-1" %>
   <%= f.button :submit, 'Ask LLM', class: 'btn btn-primary' %>
 <% end %>
