--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -1,15 +1,16 @@
 <% messages.each do |message| %>
   <% if message.role == "user" %>
     <div class="d-flex justify-content-end mb-2">
-      <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
+      <div class="user p-6 message-cloud">
         <%= raw(render_markdown(message.content)) %>
       </div>
     </div>
   <% elsif message.role == "assistant" %>
-    <div class="d-flex justify-content-start mb-5">
-      <div class="px-3 pb-0 pt-3">
+    <div class="d-flex justify-content-start m-2">
+      <div class="bg-white p-6 message-cloud">
         <%= raw(render_markdown(message.content)) %>
       </div>
     </div>
   <% end %>
 <% end %>
+
