--- a/app/assets/stylesheets/pages/_travelbook.scss
+++ b/app/assets/stylesheets/pages/_travelbook.scss
@@ -6,11 +6,23 @@
 
 .card-activity {
   overflow: hidden;
-  background: white;
+  background: rgb(58, 57, 57);
+  color: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 1em 0.5em;
   margin: 1em;
   text-align: center;
+}
+
+.city-title {
+  text-align: center;
+  margin-top: 1em;
+}
+
+.big-title {
+  margin-bottom: 0;
+  margin-top: 1em;
+  font-weight: 500;
 }
 
 @media (max-width: 768px) {
