--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <%= turbo_stream.append "messages" do %>
-  <%= render "messages/messages", messages: @chat.messages.last(2) %>
+  <%= render "messages/messages", messages: @chat.messages.order(created_at: :asc).last(2) %>
 <% end %>
 
 <%= turbo_stream.update "new_message_container" do %>
