change of name to travel buddy

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div>
   <nav class="navbar">
-    <div class="logo"><%= link_to "TrueTrek", root_path %></div>
+    <div class="logo"><%= link_to "TravelBuddy", root_path %></div>
       <ul class="nav-links">
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
