--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
       <ul class="nav-links">
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Travel Book",  travelbook_path %></li>
+          <li><%= link_to "Travel Book",  travel_book_path %></li>
           <li><%= link_to "Chats", "#", class: "nav-link", data: { action: "click->toggle#call" } %></li>
           <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
         <% else %>
